--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,110 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
+
+@font-face {
+  font-family: 'GoogleSans-Regular';
+  src: URL('../vendor/font/Google-Sans/GoogleSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'GoogleSans-Medium';
+  src: URL('../vendor/font/Google-Sans/GoogleSans-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'GoogleSans-Bold';
+  src: URL('../vendor/font/Google-Sans/GoogleSans-Bold.ttf') format('truetype');
+}
+
+body {
+  font-family: 'Rubik', sans-serif !important;
+}
+
 .title {
-  font-weight: 600;
+  font-family: 'GoogleSans-Bold', sans-serif;
+  letter-spacing: -0.08em;
+  font-weight: 400;
+}
+
+.description-title {
+  margin-top: 1em;
 }
 
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
 
-.navbar-toggler {
-  border-color: #6404fc !important;
+/* Button Primary */
+.btn-primary {
+  color: #fff;
+  background-color: #fb0574 !important;
+  border-color: #fb0574 !important;
+
+  transition: all 0.3s ease-out;
+  transition-timing-function: all;
+  transition: 1.25s;
+  transform: translateY(0);
+
+  -webkit-box-shadow: -2px 15px 22px 6px rgba(255, 133, 190, 0.274);
+  -moz-box-shadow: -2px 15px 22px 6pxrgba(255, 133, 190, 0.274);
+  box-shadow: -2px 15px 22px 6px rgba(255, 133, 190, 0.274);
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #fb0574 !important;
+  border-color: #fb0574 !important;
+  position: relative;
+  -webkit-box-shadow: -2px 15px 22px 6px rgba(255, 133, 190, 0.555);
+  -moz-box-shadow: -2px 15px 22px 6px rgba(255, 133, 190, 0.541);
+  box-shadow: -2px 15px 22px 6px rgba(255, 133, 190, 0.568);
+
+  transition-timing-function: ease;
+  transition: 0.25s;
+  transform: translateY(-7%);
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 38, 157, 0.5) !important;
+}
+
+.btn-primary.disabled,
+.btn-primary:disabled {
+  color: #fff;
+  background-color: #fb0574 !important;
+  border-color: #fb0574 !important;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.show>.btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #fb0574 !important;
+  border-color: #fb0574 !important;
+}
+
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 38, 208, 0.24);
+}
+
+.font-btn-small {
+  font-size: 0.7em !important;
+}
+
+#buatSekarang {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+/* Card Feature */
+.card {
+  border-color: transparent !important;
+  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.12);
+}
+
+.card-feature {
+  margin-top: -5em;
 }
